tests/semantic/valid/66_i2_mutual_infer.hulk
function a(x) => b(x);

function b(x) => x + 1;

print(a(1));
