tests/semantic/invalid/10_r3_duplicate_params.hulk
function bad(x, x) => x;

print(bad(1));
